hlvm/test/invalid/badenum.hlx
<?xml version="1.0" encoding="UTF-8"?>
<hlvm xmlns="http://hlvm.org/src/hlvm/Reader/XML/HLVM.rng" pubid="http://hlvm.org/src/hlvm/test/invalid/badbin.hlx">
  <bundle id="badbin">
    <enumeration id="list">
      <enumerator id="item1"/>
    </enumeration>
    <constant id="aListValue" type="list">
      <enum>item2</enum>
    </constant>
  </bundle>
</hlvm>
